#7 WIP adds Audio, FACCH1, FACCH2 and SACCH decoding.